--- a/Nivel2-A/Documentos/Guia/preamble.tex
+++ b/Nivel2-A/Documentos/Guia/preamble.tex
@@ -54,6 +54,12 @@
 % Pagina en blanco cuando ha
 \usepackage{emptypage}
 
+% Subfiguras
+\usepackage{subfig}
+
+% Menues y path
+\usepackage[os=win]{menukeys}
+\renewmenumacro{\directory}{pathswithfolder}
 \definecolor{A11}{HTML}{B2DF8A}
 \definecolor{A12}{HTML}{33A02C}
 \definecolor{A23}{HTML}{FDBF6F}
@@ -67,5 +73,5 @@
 \theoremstyle{definition}
 \newtheorem{exa}{Ejemplo}[section]
 \newtheorem*{obs}{Observación}
-\newtheorem{que}{Pregunta}[section]
+\newtheorem{que}{}[section]
 \newtheorem{dex}{Definicion}[section]
